# rust-ci-study

./: Cargo.toml
.github/workflows/: CI.yaml
src/: fusion.rs  lib.rs  main.rs
