[package]
name = "parse-json"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "一个处理json的cli程序"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dialogue-macro = "0.2.1"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
